hard-gists/2840020/run.log
=== Docker Run Log for 2840020 ===
Started at: Mi 29. Okt 13:18:11 CET 2025

[2025-10-29 13:18:12] START: Running container for 2840020
[2025-10-29 13:18:12] SUCCESS: Container e7fb6afa52b3b197c5055751ef3e5a5d58d86f795fed68bc2c602b7934638392 started for 2840020
=== Container logs for 2840020 ===
  File "/snippet.py", line 24
    print "---"
    ^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2840020 ===
[2025-10-29 13:18:14] INFO: Container e7fb6afa52b3b197c5055751ef3e5a5d58d86f795fed68bc2c602b7934638392 has stopped
